# self-sensor

./: README.md  pyproject.toml  run.py
slsn/: __init__.py  graph.py  localization.py  network.py
tests/: test_localization.py
visualizers/: __init__.py  plot_analysis.py  plot_animation.py  plot_static.py
